[gd_scene load_steps=10 format=3 uid="uid://dp3rgqaehb3xu"]

[ext_resource type="Script" path="res://Scenes/OptionsMenu/Input/InputOptionsMenu.gd" id="1"]
[ext_resource type="Theme" uid="uid://bmf31mho1mjjt" path="res://Resources/MainGameUITheme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://bef816edvcpop" path="res://Assets/Sourced/Sprout Lands/UI/Sprite sheet for Basic Pack.png" id="2_2e053"]
[ext_resource type="Script" path="res://Scripts/CaptureFocus.gd" id="3_hpjry"]
[ext_resource type="Script" path="res://Scenes/OptionsMenu/Input/KeyAssignmentDialog.gd" id="3_wsh2h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ho5"]
atlas = ExtResource("2_2e053")
region = Rect2(869, 134, 22, 22)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f17i5"]
load_path = "res://.godot/imported/Sprite sheet for Basic Pack.png-0f928c627b472588e7480dbd82d8143f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_oydjo"]
atlas = SubResource("CompressedTexture2D_f17i5")
region = Rect2(869, 166, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8m065"]
texture = ExtResource("2_2e053")
texture_margin_left = 7.0
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 7.0
region_rect = Rect2(201, 105, 30, 30)

[node name="Input" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
add_button_texture = SubResource("AtlasTexture_n3ho5")
remove_button_texture = SubResource("AtlasTexture_oydjo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 280)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_8m065")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("3_hpjry")

[node name="Tree" type="Tree" parent="VBoxContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="KeyAssignmentDialog" type="ConfirmationDialog" parent="."]
title = "Assign Key"
size = Vector2i(400, 100)
theme = ExtResource("2")
dialog_text = "Press a key or button..."
script = ExtResource("3_wsh2h")

[node name="OneInputMinimumDialog" type="AcceptDialog" parent="."]
title = "Cannot Remove"
size = Vector2i(398, 100)

[node name="AlreadyAssignedDialog" type="AcceptDialog" parent="."]
title = "Already Assigned"
size = Vector2i(398, 100)

[connection signal="button_clicked" from="VBoxContainer/Panel/MarginContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="canceled" from="KeyAssignmentDialog" to="." method="_on_key_assignment_dialog_canceled"]
[connection signal="confirmed" from="KeyAssignmentDialog" to="." method="_on_KeyAssignmentDialog_confirmed"]
